--- a/index.html
+++ b/index.html
@@ -1,118 +1,445 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Hotstar Style M3U Player</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Live TV — Sections + M3U8 External Player</title>
 
-<script src="https://cdn.tailwindcss.com"></script>
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <!-- Tailwind -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-<style>
-body {
-  background:#0f172a;
-  font-family: Arial, sans-serif;
-}
-.card:hover img {
-  transform: scale(1.08);
-}
-.card img {
-  transition: 0.3s;
-}
-</style>
+  <style>
+    body { background:#0b1220; }
+    .glass { backdrop-filter: blur(10px); background: rgba(15, 23, 42, 0.65); }
+    .card:hover .thumb { transform: scale(1.06); }
+    .thumb { transition: transform 220ms ease; }
+    .ring-soft { box-shadow: 0 0 0 1px rgba(148,163,184,.18) inset; }
+  </style>
 </head>
 
-<body>
+<body class="text-slate-100">
+  <!-- Top Bar -->
+  <header class="sticky top-0 z-40 glass border-b border-white/10">
+    <div class="mx-auto max-w-7xl px-4 py-3 flex items-center gap-3">
+      <div class="flex items-center gap-2">
+        <div class="h-9 w-9 rounded-xl bg-gradient-to-br from-indigo-500 to-cyan-400"></div>
+        <div>
+          <div class="text-lg font-bold leading-tight">Live Channels</div>
+          <div class="text-xs text-slate-300">Hotstar-style layout • sections • search</div>
+        </div>
+      </div>
 
-<!-- HEADER -->
-<div class="p-4 text-white text-2xl font-bold">
-  Live Channels
-</div>
+      <div class="ml-auto flex items-center gap-2 w-full max-w-xl">
+        <div class="relative w-full">
+          <input
+            id="search"
+            class="w-full rounded-xl bg-slate-900/60 ring-soft border border-white/10 px-4 py-2 pl-10 text-sm outline-none focus:border-cyan-400/60"
+            placeholder="Search channels (e.g., cricket, sports, India...)"
+          />
+          <svg class="absolute left-3 top-2.5 h-4 w-4 text-slate-400" viewBox="0 0 24 24" fill="none">
+            <path d="M21 21l-4.3-4.3m1.8-5.2a7 7 0 11-14 0 7 7 0 0114 0z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </div>
 
-<!-- CHANNEL GRID -->
-<div id="grid" class="p-4 grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
+        <button id="openAll"
+          class="hidden sm:inline-flex rounded-xl bg-cyan-500/15 border border-cyan-400/20 px-3 py-2 text-sm hover:bg-cyan-500/20">
+          Open current section
+        </button>
+      </div>
+    </div>
 
-<!-- PLAYER MODAL -->
-<div id="modal" class="hidden fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50">
-  <div class="bg-black w-full max-w-4xl p-3 rounded">
-    <video id="player" controls class="w-full h-[420px] bg-black"></video>
-    <button onclick="closePlayer()" class="mt-2 bg-red-600 px-4 py-1 text-white rounded">
-      Close
-    </button>
+    <!-- Section Tabs -->
+    <div class="mx-auto max-w-7xl px-4 pb-3">
+      <div id="tabs" class="flex flex-wrap gap-2">
+        <!-- tabs inserted by JS -->
+      </div>
+    </div>
+  </header>
+
+  <!-- Hero / Featured row -->
+  <section class="mx-auto max-w-7xl px-4 pt-6">
+    <div class="rounded-2xl border border-white/10 ring-soft overflow-hidden bg-gradient-to-r from-slate-900/60 to-slate-900/20">
+      <div class="p-5 sm:p-7 flex flex-col sm:flex-row gap-4 items-start sm:items-center">
+        <div class="flex-1">
+          <div class="text-xs text-slate-300">Tip</div>
+          <h1 class="text-xl sm:text-2xl font-bold mt-1">Organized sections: Sports • Cricket • India • Countries</h1>
+          <p class="text-slate-300 text-sm mt-2 max-w-2xl">
+            This template opens streams in your external M3U8 player using a URL parameter.
+            Replace the sample channel list with streams you have permission to distribute.
+          </p>
+        </div>
+        <div class="flex gap-2">
+          <button id="howBtn"
+            class="rounded-xl bg-slate-900/60 border border-white/10 px-4 py-2 text-sm hover:bg-slate-900/80">
+            How to add channels
+          </button>
+          <button id="legalBtn"
+            class="rounded-xl bg-amber-500/15 border border-amber-400/20 px-4 py-2 text-sm hover:bg-amber-500/20">
+            Use licensed sources
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Grid -->
+  <main class="mx-auto max-w-7xl px-4 py-6">
+    <div class="flex items-center justify-between mb-4">
+      <div>
+        <div id="sectionTitle" class="text-lg font-semibold">Section</div>
+        <div id="sectionMeta" class="text-xs text-slate-400">0 channels</div>
+      </div>
+
+      <div class="flex items-center gap-2">
+        <select id="sort"
+          class="rounded-xl bg-slate-900/60 ring-soft border border-white/10 px-3 py-2 text-sm outline-none">
+          <option value="az">Sort A–Z</option>
+          <option value="za">Sort Z–A</option>
+          <option value="featured">Featured first</option>
+        </select>
+      </div>
+    </div>
+
+    <div id="grid" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4"></div>
+
+    <div id="emptyState" class="hidden mt-10 text-center text-slate-400">
+      <div class="text-lg font-semibold text-slate-200">No channels found</div>
+      <div class="text-sm mt-1">Try a different search or section.</div>
+    </div>
+  </main>
+
+  <!-- Modal -->
+  <div id="modal" class="hidden fixed inset-0 z-50 bg-black/70 flex items-center justify-center p-4">
+    <div class="w-full max-w-2xl rounded-2xl border border-white/10 ring-soft bg-slate-950/70 overflow-hidden">
+      <div class="p-4 border-b border-white/10 flex items-center justify-between">
+        <div>
+          <div id="modalTitle" class="font-semibold">Channel</div>
+          <div id="modalSub" class="text-xs text-slate-400">Open in external player</div>
+        </div>
+        <button id="closeModal" class="rounded-xl bg-slate-900/60 border border-white/10 px-3 py-1.5 text-sm">
+          Close
+        </button>
+      </div>
+      <div class="p-4 space-y-3">
+        <div class="text-sm text-slate-300">
+          This template launches your chosen stream in:
+          <span class="text-slate-100 font-medium">teamrom3u8plyr2.pages.dev</span>
+        </div>
+
+        <div class="rounded-xl bg-slate-900/60 border border-white/10 p-3">
+          <div class="text-xs text-slate-400">Stream URL</div>
+          <div id="streamUrl" class="text-sm break-all mt-1"></div>
+        </div>
+
+        <div class="flex flex-wrap gap-2">
+          <button id="playExternal"
+            class="rounded-xl bg-cyan-500/20 border border-cyan-400/25 px-4 py-2 text-sm hover:bg-cyan-500/25">
+            Play in external player
+          </button>
+
+          <button id="copyUrl"
+            class="rounded-xl bg-slate-900/60 border border-white/10 px-4 py-2 text-sm hover:bg-slate-900/80">
+            Copy stream URL
+          </button>
+        </div>
+
+        <div class="text-xs text-slate-500">
+          Replace the sample data with authorized streams (your own HLS, licensed FAST channels, or vendor-provided links).
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+
+  <!-- Toast -->
+  <div id="toast" class="hidden fixed bottom-4 left-1/2 -translate-x-1/2 z-50">
+    <div class="rounded-xl bg-slate-900/80 border border-white/10 px-4 py-2 text-sm ring-soft">
+      Copied to clipboard
+    </div>
+  </div>
 
 <script>
-const M3U_URL = "https://allinonereborn.xyz/playlist/vip.m3u";
-const grid = document.getElementById("grid");
-const modal = document.getElementById("modal");
-const video = document.getElementById("player");
-let hls;
+  /***********************
+   * 1) CONFIG
+   ***********************/
+  const EXTERNAL_PLAYER_BASE = "https://teamrom3u8plyr2.pages.dev/?url=";
 
-fetch(M3U_URL)
-  .then(res => res.text())
-  .then(parseM3U)
-  .catch(err => console.error("M3U Error:", err));
-
-function parseM3U(data) {
-  const lines = data.split("\n");
-  let channel = {};
-
-  lines.forEach(line => {
-    line = line.trim();
-
-    if (line.startsWith("#EXTINF")) {
-      channel = {};
-      channel.title = line.split(",").pop();
-
-      const logoMatch = line.match(/tvg-logo="(.*?)"/);
-      channel.logo = logoMatch ? logoMatch[1] : "";
+  // Replace these with streams you are authorized to use.
+  // Each channel needs: title, url (m3u8), logo, section, tags (optional), featured (optional)
+  const CHANNELS = [
+    // Sports
+    {
+      title: "Sports Network (Sample)",
+      url: "https://example.com/live/sports.m3u8",
+      logo: "https://dummyimage.com/640x360/111827/ffffff&text=SPORTS",
+      section: "Sports",
+      tags: ["sports", "live"],
+      featured: true
+    },
+    // Cricket
+    {
+      title: "Cricket Live (Sample)",
+      url: "https://example.com/live/cricket.m3u8",
+      logo: "https://dummyimage.com/640x360/0f172a/ffffff&text=CRICKET",
+      section: "Cricket",
+      tags: ["cricket", "india"],
+      featured: true
+    },
+    // India TV
+    {
+      title: "India Entertainment (Sample)",
+      url: "https://example.com/live/india-tv.m3u8",
+      logo: "https://dummyimage.com/640x360/1f2937/ffffff&text=INDIA+TV",
+      section: "India TV",
+      tags: ["india", "tv"]
+    },
+    // Countries
+    {
+      title: "UK News (Sample)",
+      url: "https://example.com/live/uk-news.m3u8",
+      logo: "https://dummyimage.com/640x360/111827/ffffff&text=UK",
+      section: "United Kingdom",
+      tags: ["uk", "news"]
+    },
+    {
+      title: "USA Live (Sample)",
+      url: "https://example.com/live/usa.m3u8",
+      logo: "https://dummyimage.com/640x360/111827/ffffff&text=USA",
+      section: "United States",
+      tags: ["usa"]
     }
+  ];
 
-    if (line && !line.startsWith("#")) {
-      channel.url = line;
-      if (channel.logo) createCard(channel);
-    }
-  });
-}
+  /***********************
+   * 2) DERIVED SECTIONS
+   ***********************/
+  const DEFAULT_SECTIONS = ["Sports", "Cricket", "India TV"];
+  const countrySections = [...new Set(CHANNELS
+    .map(c => c.section)
+    .filter(s => !DEFAULT_SECTIONS.includes(s))
+  )];
 
-function createCard(ch) {
-  const card = document.createElement("div");
-  card.className = "card cursor-pointer";
+  const SECTIONS = [
+    ...DEFAULT_SECTIONS,
+    ...countrySections,
+    "All"
+  ];
 
-  card.innerHTML = `
-    <div class="overflow-hidden rounded-lg bg-gray-800">
-      <img src="${ch.logo}" class="w-full h-40 object-cover">
-    </div>
-    <p class="text-white text-sm mt-1 truncate">${ch.title}</p>
-  `;
+  /***********************
+   * 3) UI STATE
+   ***********************/
+  let activeSection = "All";
+  let activeQuery = "";
+  let activeSort = "featured";
 
-  card.onclick = () => playStream(ch.url);
-  grid.appendChild(card);
-}
+  const elTabs = document.getElementById("tabs");
+  const elGrid = document.getElementById("grid");
+  const elEmpty = document.getElementById("emptyState");
+  const elTitle = document.getElementById("sectionTitle");
+  const elMeta = document.getElementById("sectionMeta");
+  const elSearch = document.getElementById("search");
+  const elSort = document.getElementById("sort");
+  const elOpenAll = document.getElementById("openAll");
 
-function playStream(url) {
-  modal.classList.remove("hidden");
+  const modal = document.getElementById("modal");
+  const modalTitle = document.getElementById("modalTitle");
+  const streamUrlEl = document.getElementById("streamUrl");
+  const btnPlayExternal = document.getElementById("playExternal");
+  const btnCopyUrl = document.getElementById("copyUrl");
+  const btnCloseModal = document.getElementById("closeModal");
 
-  if (hls) hls.destroy();
+  const toast = document.getElementById("toast");
 
-  if (Hls.isSupported()) {
-    hls = new Hls();
-    hls.loadSource(url);
-    hls.attachMedia(video);
-    hls.on(Hls.Events.MANIFEST_PARSED, () => video.play());
-  } else {
-    video.src = url;
-    video.play();
+  let currentModalUrl = "";
+
+  /***********************
+   * 4) RENDER TABS
+   ***********************/
+  function renderTabs() {
+    elTabs.innerHTML = "";
+    SECTIONS.forEach(sec => {
+      const btn = document.createElement("button");
+      const isActive = sec === activeSection;
+
+      btn.className = [
+        "rounded-xl px-3 py-1.5 text-sm border transition",
+        isActive
+          ? "bg-cyan-500/20 border-cyan-400/30 text-white"
+          : "bg-slate-900/50 border-white/10 text-slate-200 hover:bg-slate-900/80"
+      ].join(" ");
+
+      btn.textContent = sec;
+      btn.onclick = () => {
+        activeSection = sec;
+        renderTabs();
+        renderGrid();
+      };
+      elTabs.appendChild(btn);
+    });
   }
-}
 
-function closePlayer() {
-  modal.classList.add("hidden");
-  video.pause();
-  video.src = "";
-  if (hls) hls.destroy();
-}
+  /***********************
+   * 5) FILTER + SORT
+   ***********************/
+  function normalize(s) {
+    return (s || "").toString().toLowerCase().trim();
+  }
+
+  function matchesQuery(ch, q) {
+    if (!q) return true;
+    const hay = [
+      ch.title,
+      ch.section,
+      ...(ch.tags || [])
+    ].map(normalize).join(" ");
+    return hay.includes(q);
+  }
+
+  function getVisibleChannels() {
+    const q = normalize(activeQuery);
+
+    let list = CHANNELS.filter(ch => {
+      const inSection = (activeSection === "All") ? true : ch.section === activeSection;
+      return inSection && matchesQuery(ch, q);
+    });
+
+    if (activeSort === "featured") {
+      list.sort((a, b) => (b.featured === true) - (a.featured === true) || a.title.localeCompare(b.title));
+    } else if (activeSort === "az") {
+      list.sort((a, b) => a.title.localeCompare(b.title));
+    } else if (activeSort === "za") {
+      list.sort((a, b) => b.title.localeCompare(a.title));
+    }
+    return list;
+  }
+
+  /***********************
+   * 6) CARD + GRID RENDER
+   ***********************/
+  function channelCard(ch) {
+    const card = document.createElement("div");
+    card.className = "card cursor-pointer group";
+
+    card.innerHTML = `
+      <div class="rounded-2xl overflow-hidden border border-white/10 ring-soft bg-slate-900/40">
+        <div class="relative">
+          <img class="thumb w-full h-32 sm:h-36 object-cover" src="${ch.logo || ""}" alt="${ch.title}">
+          <div class="absolute inset-x-0 bottom-0 p-2 bg-gradient-to-t from-black/70 to-transparent">
+            <div class="flex items-center justify-between gap-2">
+              <span class="text-[11px] text-slate-200/90 bg-black/30 border border-white/10 rounded-full px-2 py-0.5">
+                ${ch.section}
+              </span>
+              ${ch.featured ? `<span class="text-[11px] text-amber-200 bg-amber-500/20 border border-amber-400/20 rounded-full px-2 py-0.5">Featured</span>` : ""}
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="mt-2">
+        <div class="text-sm font-medium truncate">${ch.title}</div>
+        <div class="text-xs text-slate-400 truncate">${(ch.tags || []).join(" • ")}</div>
+      </div>
+    `;
+
+    card.onclick = () => openModal(ch);
+    return card;
+  }
+
+  function renderGrid() {
+    const list = getVisibleChannels();
+
+    elTitle.textContent = activeSection;
+    elMeta.textContent = `${list.length} channel${list.length === 1 ? "" : "s"}`;
+
+    elGrid.innerHTML = "";
+    list.forEach(ch => elGrid.appendChild(channelCard(ch)));
+
+    elEmpty.classList.toggle("hidden", list.length !== 0);
+
+    // Show/hide "Open current section" on larger screens
+    elOpenAll.classList.toggle("hidden", list.length === 0);
+    elOpenAll.onclick = () => {
+      // opens the first channel in the section as a convenience
+      if (list[0]) {
+        window.open(EXTERNAL_PLAYER_BASE + encodeURIComponent(list[0].url), "_blank", "noopener,noreferrer");
+      }
+    };
+  }
+
+  /***********************
+   * 7) MODAL ACTIONS
+   ***********************/
+  function openModal(ch) {
+    currentModalUrl = ch.url;
+    modalTitle.textContent = ch.title;
+    streamUrlEl.textContent = ch.url;
+    modal.classList.remove("hidden");
+  }
+
+  function closeModal() {
+    modal.classList.add("hidden");
+    currentModalUrl = "";
+  }
+
+  btnCloseModal.onclick = closeModal;
+  modal.addEventListener("click", (e) => {
+    if (e.target === modal) closeModal();
+  });
+
+  btnPlayExternal.onclick = () => {
+    if (!currentModalUrl) return;
+    const link = EXTERNAL_PLAYER_BASE + encodeURIComponent(currentModalUrl);
+    window.open(link, "_blank", "noopener,noreferrer");
+  };
+
+  btnCopyUrl.onclick = async () => {
+    if (!currentModalUrl) return;
+    try {
+      await navigator.clipboard.writeText(currentModalUrl);
+      toast.classList.remove("hidden");
+      setTimeout(() => toast.classList.add("hidden"), 1200);
+    } catch (e) {
+      alert("Copy failed. Your browser may block clipboard access.");
+    }
+  };
+
+  /***********************
+   * 8) EVENTS
+   ***********************/
+  elSearch.addEventListener("input", (e) => {
+    activeQuery = e.target.value;
+    renderGrid();
+  });
+
+  elSort.addEventListener("change", (e) => {
+    activeSort = e.target.value;
+    renderGrid();
+  });
+
+  document.getElementById("howBtn").onclick = () => {
+    alert(
+`How to add channels:
+1) Find the CHANNELS array in the code.
+2) Add items like:
+   { title, url, logo, section, tags, featured }
+3) Use your own authorized .m3u8 stream URLs.
+4) Add new countries by setting section: "Canada", "UAE", etc.
+They will automatically appear as tabs.`
+    );
+  };
+
+  document.getElementById("legalBtn").onclick = () => {
+    alert(
+`Reminder:
+Only use streams you have permission to distribute or access.
+Examples: your own HLS, vendor-provided links, or licensed FAST channel feeds.`
+    );
+  };
+
+  /***********************
+   * 9) INIT
+   ***********************/
+  renderTabs();
+  renderGrid();
 </script>
-
 </body>
 </html>
